fixed random css change on the ion-button control that was adding extra padding

--- a/src/app/pages/user-locator/user-locator.page.scss
+++ b/src/app/pages/user-locator/user-locator.page.scss
@@ -2,6 +2,11 @@
   margin: 0px;  
 }
 
+ion-button.hideShowToolbarBtn::part(native) {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
+
 .lynx-toolbar {
   background: var(--lynxPink);
 }
